k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: # which pods it'll give access
    component: web
  ports:
    - port: 3000 # It's not required to be the same of targetPort 
      targetPort: 3000
